--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +25,46 @@
     "    model_path=model_path,\n",
     "    datapath='data/testset.npy'\n",
     "    )\n",
-    "    print(f\"Validation CER: {cer_val}, Validation WER: {wer_val}\")\n",
-    "    print(f\"Test CER: {cer_test}, Test WER: {wer_test}\")\n",
+    "    print(\"\\t\\tCER\\t\\tWER\")\n",
+    "    #round up to 4 decimal places \n",
+    "    cer_val = round(cer_val, 4)\n",
+    "    wer_val = round(wer_val, 4)\n",
+    "    cer_test = round(cer_test, 4)\n",
+    "    wer_test = round(wer_test, 4)\n",
     "    \n",
-    "    \n"
+    "    print(f\"Validation\\t{cer_val}\\t\\t{wer_val}\")\n",
+    "    print(f\"Test\\t\\t{cer_test}\\t\\t{wer_test}\")\n",
+    "    \n",
+    "    return (cer_val, wer_val, cer_test, wer_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HTR NET  without the custom dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1097/1097 [00:12<00:00, 84.51it/s]\n",
-      "100%|██████████| 247/247 [00:02<00:00, 90.75it/s]"
+      "100%|██████████| 900/900 [00:10<00:00, 87.59it/s]\n",
+      "100%|██████████| 247/247 [00:02<00:00, 99.47it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation CER: 0.1013065937405044, Validation WER: 0.21330902461257975\n",
-      "Test CER: 0.20850202429149794, Test WER: 0.3967611336032389\n"
+      "\t\tCER\t\tWER\n",
+      "Validation\t0.152\t\t0.29\n",
+      "Test\t\t0.3601\t\t0.6073\n"
      ]
     },
     {
@@ -61,28 +76,36 @@
     }
    ],
    "source": [
-    "interpret('results/htr_net_5k_data')\n"
+    "htr_net_no_cus = interpret('results/htr_net_no_custom_new_split')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HTR NET with the custom dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 900/900 [00:10<00:00, 81.91it/s]\n",
-      "100%|██████████| 247/247 [00:02<00:00, 90.75it/s]"
+      "100%|██████████| 1128/1128 [00:12<00:00, 90.37it/s]\n",
+      "100%|██████████| 247/247 [00:02<00:00, 98.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation CER: 0.15200000000000002, Validation WER: 0.29\n",
-      "Test CER: 0.3600539811066127, Test WER: 0.6072874493927125\n"
+      "\t\tCER\t\tWER\n",
+      "Validation\t0.091\t\t0.2004\n",
+      "Test\t\t0.2021\t\t0.3846\n"
      ]
     },
     {
@@ -94,28 +117,43 @@
     }
    ],
    "source": [
-    "interpret('results/htr_net_no_custom_new_split')"
+    "htr_net_cus = interpret('results/htr_full_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CNN-BILSTM from mltu WITHOUT custom dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1055/1055 [00:06<00:00, 156.30it/s]\n",
-      "100%|██████████| 247/247 [00:01<00:00, 185.20it/s]"
+      "  0%|          | 0/1552 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1552/1552 [00:09<00:00, 161.04it/s]\n",
+      "100%|██████████| 247/247 [00:01<00:00, 186.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation CER: 0.10475513428120062, Validation WER: 0.22843601895734597\n",
-      "Test CER: 0.2012145748987854, Test WER: 0.3724696356275304\n"
+      "\t\tCER\t\tWER\n",
+      "Validation\t0.1004\t\t0.2313\n",
+      "Test\t\t0.2399\t\t0.413\n"
      ]
     },
     {
@@ -127,7 +165,78 @@
     }
    ],
    "source": [
-    "interpret('results/cnn_bilstm_entire_dataset')\n"
+    "cnn_bilstm_no_cust = interpret('results/cnn_bilstm_mltu1')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CNN-BILSTM from mltu WITH custom dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1128/1128 [00:06<00:00, 169.75it/s]\n",
+      "100%|██████████| 247/247 [00:01<00:00, 184.24it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\tCER\t\tWER\n",
+      "Validation\t0.0948\t\t0.195\n",
+      "Test\t\t0.1761\t\t0.3279\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnn_bilstm_cust = interpret('results/cnn_bilstm_mltu_all_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom dataset \t\t WITHOUT \t\t WITH\n",
+      "\t\t\t Val \t Test \t\t Val \t Test\n",
+      "HTR-Net \t\t 0.152 \t 0.3601 \t 0.091 \t 0.2021\n",
+      "CNN-BiLSTM-MLTU  \t0.1004 \t 0.2399 \t 0.0948  0.1761\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Custom dataset \\t\\t WITHOUT \\t\\t WITH\")\n",
+    "print(\"\\t\\t\\t Val \\t Test \\t\\t Val \\t Test\") \n",
+    "print(f\"HTR-Net \\t\\t {htr_net_no_cus[0]} \\t {htr_net_no_cus[2]} \\t {htr_net_cus[0]} \\t {htr_net_cus[2]}\")\n",
+    "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[0]} \\t {cnn_bilstm_no_cust[2]} \\t {cnn_bilstm_cust[0]}  {cnn_bilstm_cust[2]}\")\n"
    ]
   },
   {
