addded wer to interpretations

--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -218,26 +218,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\t\t\t---------------- CER ----------------\n",
       "Custom dataset \t\t WITHOUT \t\t WITH\n",
       "\t\t\t Val \t Test \t\t Val \t Test\n",
+      "CNN-BiLSTM-MLTU  \t0.1004 \t 0.2399 \t 0.0948  0.1761\n",
       "HTR-Net \t\t 0.152 \t 0.3601 \t 0.091 \t 0.2021\n",
-      "CNN-BiLSTM-MLTU  \t0.1004 \t 0.2399 \t 0.0948  0.1761\n"
+      "\t\t\t---------------- WER ----------------\n",
+      "Custom dataset \t\t WITHOUT \t\t WITH\n",
+      "\t\t\t Val \t Test \t\t Val \t Test\n",
+      "CNN-BiLSTM-MLTU  \t0.2313 \t 0.413 \t\t 0.195\t 0.3279\n",
+      "HTR-Net \t\t0.29 \t 0.6073 \t 0.2004  0.3846\n"
      ]
     }
    ],
    "source": [
+    "print(\"\\t\\t\\t---------------- CER ----------------\")\n",
     "print(\"Custom dataset \\t\\t WITHOUT \\t\\t WITH\")\n",
     "print(\"\\t\\t\\t Val \\t Test \\t\\t Val \\t Test\") \n",
+    "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[0]} \\t {cnn_bilstm_no_cust[2]} \\t {cnn_bilstm_cust[0]}  {cnn_bilstm_cust[2]}\")\n",
     "print(f\"HTR-Net \\t\\t {htr_net_no_cus[0]} \\t {htr_net_no_cus[2]} \\t {htr_net_cus[0]} \\t {htr_net_cus[2]}\")\n",
-    "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[0]} \\t {cnn_bilstm_no_cust[2]} \\t {cnn_bilstm_cust[0]}  {cnn_bilstm_cust[2]}\")\n"
+    "print(\"\\t\\t\\t---------------- WER ----------------\")\n",
+    "print(\"Custom dataset \\t\\t WITHOUT \\t\\t WITH\")\n",
+    "print(\"\\t\\t\\t Val \\t Test \\t\\t Val \\t Test\")\n",
+    "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[1]} \\t {cnn_bilstm_no_cust[3]} \\t\\t {cnn_bilstm_cust[1]}\\t {cnn_bilstm_cust[3]}\")\n",
+    "print(f\"HTR-Net \\t\\t{htr_net_no_cus[1]} \\t {htr_net_no_cus[3]} \\t {htr_net_cus[1]}  {htr_net_cus[3]}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
