final results for cnn bilstm+htrnet

--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -129,22 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1552 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1552/1552 [00:09<00:00, 161.04it/s]\n",
-      "100%|██████████| 247/247 [00:01<00:00, 186.55it/s]"
+      "100%|██████████| 900/900 [00:05<00:00, 159.30it/s]\n",
+      "100%|██████████| 247/247 [00:01<00:00, 186.07it/s]"
      ]
     },
     {
@@ -152,8 +145,8 @@
      "output_type": "stream",
      "text": [
       "\t\tCER\t\tWER\n",
-      "Validation\t0.1004\t\t0.2313\n",
-      "Test\t\t0.2399\t\t0.413\n"
+      "Validation\t0.1581\t\t0.3033\n",
+      "Test\t\t0.3559\t\t0.5506\n"
      ]
     },
     {
@@ -165,7 +158,7 @@
     }
    ],
    "source": [
-    "cnn_bilstm_no_cust = interpret('results/cnn_bilstm_mltu1')\n"
+    "cnn_bilstm_no_cust = interpret('results/cnn_bilstm_no_custom')\n"
    ]
   },
   {
@@ -218,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -228,12 +221,12 @@
       "\t\t\t---------------- CER ----------------\n",
       "Custom dataset \t\t WITHOUT \t\t WITH\n",
       "\t\t\t Val \t Test \t\t Val \t Test\n",
-      "CNN-BiLSTM-MLTU  \t0.1004 \t 0.2399 \t 0.0948  0.1761\n",
+      "CNN-BiLSTM-MLTU  \t0.1581 \t 0.3559 \t 0.0948  0.1761\n",
       "HTR-Net \t\t 0.152 \t 0.3601 \t 0.091 \t 0.2021\n",
       "\t\t\t---------------- WER ----------------\n",
       "Custom dataset \t\t WITHOUT \t\t WITH\n",
       "\t\t\t Val \t Test \t\t Val \t Test\n",
-      "CNN-BiLSTM-MLTU  \t0.2313 \t 0.413 \t\t 0.195\t 0.3279\n",
+      "CNN-BiLSTM-MLTU  \t0.3033 \t 0.5506 \t 0.195\t 0.3279\n",
       "HTR-Net \t\t0.29 \t 0.6073 \t 0.2004  0.3846\n"
      ]
     }
@@ -247,16 +240,9 @@
     "print(\"\\t\\t\\t---------------- WER ----------------\")\n",
     "print(\"Custom dataset \\t\\t WITHOUT \\t\\t WITH\")\n",
     "print(\"\\t\\t\\t Val \\t Test \\t\\t Val \\t Test\")\n",
-    "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[1]} \\t {cnn_bilstm_no_cust[3]} \\t\\t {cnn_bilstm_cust[1]}\\t {cnn_bilstm_cust[3]}\")\n",
+    "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[1]} \\t {cnn_bilstm_no_cust[3]} \\t {cnn_bilstm_cust[1]}\\t {cnn_bilstm_cust[3]}\")\n",
     "print(f\"HTR-Net \\t\\t{htr_net_no_cus[1]} \\t {htr_net_no_cus[3]} \\t {htr_net_cus[1]}  {htr_net_cus[3]}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
