added results of third party methods

--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.inference import evaluate_model"
+    "from src.inference import evaluate_model\n",
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "from mltu.utils.text_utils import ctc_decoder, get_cer, get_wer \n"
    ]
   },
   {
@@ -242,6 +245,74 @@
     "print(\"\\t\\t\\t Val \\t Test \\t\\t Val \\t Test\")\n",
     "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[1]} \\t {cnn_bilstm_no_cust[3]} \\t {cnn_bilstm_cust[1]}\\t {cnn_bilstm_cust[3]}\")\n",
     "print(f\"HTR-Net \\t\\t{htr_net_no_cus[1]} \\t {htr_net_no_cus[3]} \\t {htr_net_cus[1]}  {htr_net_cus[3]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "provided_preds_df = pd.read_csv('data/raw/chess_reader_data/prediciton.csv')\n",
+    "# open test set \n",
+    "def get_perf_of_third_party(third_party_col): \n",
+    "    test_set = np.load('data/testset.npy', allow_pickle=True) \n",
+    "    # preds = provided_preds_df[third_party_col].values\n",
+    "    avg_cer = 0 \n",
+    "    for (img_file_name,label) in test_set : \n",
+    "        image_name = img_file_name.split('/')[-1] \n",
+    "        # remove .png \n",
+    "        image_id = image_name.split('.')[0] \n",
+    "        # find rows that have image_name as their first column\n",
+    "        rows = provided_preds_df.loc[provided_preds_df[\"id\"] == int(image_id)] \n",
+    "        pred = str(rows[third_party_col].values[0]) \n",
+    "        pred = pred if pred != 'nan' else '' \n",
+    "        \n",
+    "        avg_cer += get_cer(label, pred)\n",
+    "    return avg_cer / len(test_set) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cer_google = get_perf_of_third_party('gl')\n",
+    "cer_azure = get_perf_of_third_party('az') \n",
+    "cer_abby = get_perf_of_third_party('ab')\n",
+    "cer_google = round(cer_google, 4) \n",
+    "cer_azure = round(cer_azure, 4)\n",
+    "cer_abby = round(cer_abby, 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------- CER of Third Party OCR on Test Set ----------------\n",
+      "Google\t\t 0.2541\n",
+      "Azure\t\t  0.2877\n",
+      "Abbyy\t\t  0.2548\n",
+      "----------------- CER of Our Models on Test Set ----------------\n",
+      "CNN-BiLSTM-MLTU\t  0.1761\n",
+      "HTR-Net\t\t  0.2021\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"---------------- CER of Third Party OCR on Test Set ----------------\")\n",
+    "print(f\"Google\\t\\t {cer_google}\") \n",
+    "print(f\"Azure\\t\\t  {cer_azure}\")\n",
+    "print(f\"Abbyy\\t\\t  {cer_abby}\")\n",
+    "print(\"----------------- CER of Our Models on Test Set ----------------\")\n",
+    "print(f\"CNN-BiLSTM-MLTU\\t  {cnn_bilstm_cust[2]}\")\n",
+    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]}\")\n"
    ]
   },
   {
