added results of third party methods

--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,10 @@
     "def get_perf_of_third_party(third_party_col): \n",
     "    test_set = np.load('data/testset.npy', allow_pickle=True) \n",
     "    # preds = provided_preds_df[third_party_col].values\n",
+    "    \n",
     "    avg_cer = 0 \n",
+    "   \n",
+    "    avg_wer = 0 \n",
     "    for (img_file_name,label) in test_set : \n",
     "        image_name = img_file_name.split('/')[-1] \n",
     "        # remove .png \n",
@@ -267,52 +270,56 @@
     "        rows = provided_preds_df.loc[provided_preds_df[\"id\"] == int(image_id)] \n",
     "        pred = str(rows[third_party_col].values[0]) \n",
     "        pred = pred if pred != 'nan' else '' \n",
-    "        \n",
     "        avg_cer += get_cer(label, pred)\n",
-    "    return avg_cer / len(test_set) \n"
+    "        avg_wer += get_wer(pred, label) \n",
+    "    avg_cer= round(avg_cer / len(test_set), 4)\n",
+    "    avg_wer = round(avg_wer / len(test_set), 4)\n",
+    "    return avg_cer,avg_wer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cer_google = get_perf_of_third_party('gl')\n",
-    "cer_azure = get_perf_of_third_party('az') \n",
-    "cer_abby = get_perf_of_third_party('ab')\n",
-    "cer_google = round(cer_google, 4) \n",
-    "cer_azure = round(cer_azure, 4)\n",
-    "cer_abby = round(cer_abby, 4)\n"
+    "cer_google, wer_google = get_perf_of_third_party('gl')\n",
+    "cer_azure, wer_azure = get_perf_of_third_party('az') \n",
+    "cer_abby, wer_azure = get_perf_of_third_party('ab')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------------- CER of Third Party OCR on Test Set ----------------\n",
-      "Google\t\t 0.2541\n",
-      "Azure\t\t  0.2877\n",
-      "Abbyy\t\t  0.2548\n",
-      "----------------- CER of Our Models on Test Set ----------------\n",
-      "CNN-BiLSTM-MLTU\t  0.1761\n",
-      "HTR-Net\t\t  0.2021\n"
+      "---------------- Third Party OCR on Test Set ----------------\n",
+      "\t\t  CER \t\t WER\n",
+      "Google\t\t  0.2541 \t 0.4413\n",
+      "Azure\t\t  0.2877 \t 0.3765\n",
+      "Abbyy\t\t  0.2548 \t 0.3765\n",
+      "----------------- Our Models on Test Set ----------------\n",
+      "\t\t  CER \t\t WER\n",
+      "CNN-BiLSTM-MLTU\t  0.1761 \t 0.3559\n",
+      "HTR-Net\t\t  0.2021 \t 0.3601\n"
      ]
     }
    ],
    "source": [
-    "print(\"---------------- CER of Third Party OCR on Test Set ----------------\")\n",
-    "print(f\"Google\\t\\t {cer_google}\") \n",
-    "print(f\"Azure\\t\\t  {cer_azure}\")\n",
-    "print(f\"Abbyy\\t\\t  {cer_abby}\")\n",
-    "print(\"----------------- CER of Our Models on Test Set ----------------\")\n",
-    "print(f\"CNN-BiLSTM-MLTU\\t  {cnn_bilstm_cust[2]}\")\n",
-    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]}\")\n"
+    "print(\"---------------- Third Party OCR on Test Set ----------------\")\n",
+    "print(\"\\t\\t  CER \\t\\t WER\") \n",
+    "print(f\"Google\\t\\t  {cer_google} \\t {wer_google}\")\n",
+    "print(f\"Azure\\t\\t  {cer_azure} \\t {wer_azure}\")\n",
+    "print(f\"Abbyy\\t\\t  {cer_abby} \\t {wer_azure}\")\n",
+    "print(\"----------------- Our Models on Test Set ----------------\")\n",
+    "print(\"\\t\\t  CER \\t\\t WER\") \n",
+    "print(f\"CNN-BiLSTM-MLTU\\t  {cnn_bilstm_cust[2]} \\t {cnn_bilstm_no_cust[2]}\")\n",
+    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]} \\t {htr_net_no_cus[2]}\")\n"
    ]
   },
   {
