--- a/notebooks/inference_finetuned.ipynb
+++ b/notebooks/inference_finetuned.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of parameters: 61596672\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = VisionEncoderDecoderModel.from_pretrained(f\"microsoft/trocr-small-handwritten\")\n",
+    "num_params = sum(p.numel() for p in model.parameters())\n",
+    "print(f\"Number of parameters: {num_params}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,96 +127,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49eb99411dce46849ab32ac2479cf228",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading builder script:   0%|          | 0.00/4.49k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 1 - Val CER: 0.8374032162001191, Val WER: 0.9727272727272728\n",
-      "Epoch 1 - Test CER: 0.9834586466165414, Test WER: 0.979757085020243\n",
+      "Epoch 1 - Val CER: 0.3571221351900203, Val WER: 0.5517241379310345\n",
+      "Epoch 1 - Test CER: 0.7466266866566716, Test WER: 0.8785425101214575\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 2 - Val CER: 0.22721858248957713, Val WER: 0.3809090909090909\n",
-      "Epoch 2 - Test CER: 0.5834586466165413, Test WER: 0.7408906882591093\n",
+      "Epoch 2 - Val CER: 0.24949231215549753, Val WER: 0.4288240495137047\n",
+      "Epoch 2 - Test CER: 0.4782608695652174, Test WER: 0.6558704453441295\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 3 - Val CER: 0.18195354377605719, Val WER: 0.3509090909090909\n",
-      "Epoch 3 - Test CER: 0.4195488721804511, Test WER: 0.6761133603238867\n",
+      "Epoch 3 - Val CER: 0.19727299100667248, Val WER: 0.38461538461538464\n",
+      "Epoch 3 - Test CER: 0.39730134932533734, Test WER: 0.6032388663967612\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 4 - Val CER: 0.1566408576533651, Val WER: 0.3009090909090909\n",
-      "Epoch 4 - Test CER: 0.3699248120300752, Test WER: 0.5991902834008097\n",
+      "Epoch 4 - Val CER: 0.1560777487670438, Val WER: 0.3147656940760389\n",
+      "Epoch 4 - Test CER: 0.32533733133433285, Test WER: 0.5141700404858299\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 5 - Val CER: 0.11703394877903514, Val WER: 0.24272727272727274\n",
-      "Epoch 5 - Test CER: 0.2932330827067669, Test WER: 0.5020242914979757\n",
+      "Epoch 5 - Val CER: 0.12097476066144473, Val WER: 0.2519893899204244\n",
+      "Epoch 5 - Test CER: 0.20839580209895053, Test WER: 0.3967611336032389\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 6 - Val CER: 0.0878499106611078, Val WER: 0.19636363636363635\n",
-      "Epoch 6 - Test CER: 0.25263157894736843, Test WER: 0.4534412955465587\n",
+      "Epoch 6 - Val CER: 0.14012184508268058, Val WER: 0.29973474801061006\n",
+      "Epoch 6 - Test CER: 0.2563718140929535, Test WER: 0.4251012145748988\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 7 - Val CER: 0.10184633710541989, Val WER: 0.2109090909090909\n",
-      "Epoch 7 - Test CER: 0.2781954887218045, Test WER: 0.48582995951417\n",
+      "Epoch 7 - Val CER: 0.12358572671888599, Val WER: 0.268788682581786\n",
+      "Epoch 7 - Test CER: 0.22788605697151423, Test WER: 0.4331983805668016\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 8 - Val CER: 0.07593805836807624, Val WER: 0.16363636363636364\n",
-      "Epoch 8 - Test CER: 0.22556390977443608, Test WER: 0.3765182186234818\n",
+      "Epoch 8 - Val CER: 0.1174934725848564, Val WER: 0.2572944297082228\n",
+      "Epoch 8 - Test CER: 0.19490254872563717, Test WER: 0.3319838056680162\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 9 - Val CER: 0.09291244788564622, Val WER: 0.19818181818181818\n",
-      "Epoch 9 - Test CER: 0.27518796992481204, Test WER: 0.46558704453441296\n",
+      "Epoch 9 - Val CER: 0.11633304322599362, Val WER: 0.2519893899204244\n",
+      "Epoch 9 - Test CER: 0.24887556221889057, Test WER: 0.41700404858299595\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 10 - Val CER: 0.0851697438951757, Val WER: 0.1709090909090909\n",
-      "Epoch 10 - Test CER: 0.2571428571428571, Test WER: 0.4251012145748988\n",
+      "Epoch 10 - Val CER: 0.1061792863359443, Val WER: 0.2396109637488948\n",
+      "Epoch 10 - Test CER: 0.17391304347826086, Test WER: 0.32388663967611336\n",
       "Running evaluation...\n",
       "Running evaluation...\n",
-      "Epoch 11 - Val CER: 0.08606313281715307, Val WER: 0.1890909090909091\n",
-      "Epoch 11 - Test CER: 0.20150375939849624, Test WER: 0.340080971659919\n",
+      "Epoch 11 - Val CER: 0.10443864229765012, Val WER: 0.21927497789566755\n",
+      "Epoch 11 - Test CER: 0.18140929535232383, Test WER: 0.3481781376518219\n",
       "Running evaluation...\n",
-      "Running evaluation...\n",
-      "Epoch 12 - Val CER: 0.048838594401429423, Val WER: 0.10909090909090909\n",
-      "Epoch 12 - Test CER: 0.19097744360902255, Test WER: 0.32793522267206476\n",
-      "Running evaluation...\n",
-      "Running evaluation...\n",
-      "Epoch 13 - Val CER: 0.06551518761167362, Val WER: 0.14272727272727273\n",
-      "Epoch 13 - Test CER: 0.20150375939849624, Test WER: 0.3481781376518219\n",
-      "Running evaluation...\n",
-      "Running evaluation...\n",
-      "Epoch 14 - Val CER: 0.08070279928528887, Val WER: 0.17727272727272728\n",
-      "Epoch 14 - Test CER: 0.23609022556390977, Test WER: 0.4291497975708502\n",
-      "Running evaluation...\n",
-      "Running evaluation...\n",
-      "Epoch 15 - Val CER: 0.07117331745086361, Val WER: 0.14727272727272728\n",
-      "Epoch 15 - Test CER: 0.21804511278195488, Test WER: 0.3684210526315789\n",
-      "Running evaluation...\n",
-      "Running evaluation...\n",
-      "Epoch 16 - Val CER: 0.07772483621203097, Val WER: 0.17181818181818181\n",
-      "Epoch 16 - Test CER: 0.21353383458646616, Test WER: 0.3684210526315789\n"
+      "Running evaluation...\n"
      ]
     }
    ],
    "source": [
-    "max_epochs = 16 \n",
+    "max_epochs = 15\n",
     "test_metrics_list = []\n",
     "val_metrics_list = []\n",
     "\n",
