--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +305,8 @@
       "Abbyy\t\t  0.2548 \t 0.3765\n",
       "----------------- Our Models on Test Set ----------------\n",
       "\t\t  CER \t\t WER\n",
-      "CNN-BiLSTM-MLTU\t  0.1761 \t 0.3559\n",
-      "HTR-Net\t\t  0.2021 \t 0.3601\n"
+      "CNN-BiLSTM-MLTU\t  0.1761 \t 0.3279\n",
+      "HTR-Net\t\t  0.2021 \t 0.3846\n"
      ]
     }
    ],
@@ -318,8 +318,8 @@
     "print(f\"Abbyy\\t\\t  {cer_abby} \\t {wer_azure}\")\n",
     "print(\"----------------- Our Models on Test Set ----------------\")\n",
     "print(\"\\t\\t  CER \\t\\t WER\") \n",
-    "print(f\"CNN-BiLSTM-MLTU\\t  {cnn_bilstm_cust[2]} \\t {cnn_bilstm_no_cust[2]}\")\n",
-    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]} \\t {htr_net_no_cus[2]}\")\n"
+    "print(f\"CNN-BiLSTM-MLTU\\t  {cnn_bilstm_cust[2]} \\t {cnn_bilstm_cust[3]}\")\n",
+    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]} \\t {htr_net_cus[3]}\")\n"
    ]
   },
   {
