added majority votes

--- a/notebooks/inference_finetuned.ipynb
+++ b/notebooks/inference_finetuned.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,17 @@
     "from PIL import Image\n",
     "from transformers import TrOCRProcessor\n",
     "from torch.utils.data import DataLoader\n",
-    "from tqdm.notebook import tqdm\n",
     "from transformers import VisionEncoderDecoderModel\n",
     "import torch\n",
     "from evaluate import load\n",
     "import logging\n",
     "import matplotlib.pyplot as plt \n",
     "# Set logging level for transformers to ERROR (or CRITICAL to suppress more)\n",
-    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n"
+    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n",
+    "from src.inference import ImageToWordModel \n",
+    "import cv2 \n",
+    "from mltu.utils.text_utils import  get_cer, get_wer \n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -333,6 +336,144 @@
     "print(\"Val WER: \", val_wers[min_cer_index])\n",
     "print(\"Test CER: \", test_cers[min_cer_index])\n",
     "print(\"Test WER: \", test_wers[min_cer_index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the best model \n",
+    "best_model = VisionEncoderDecoderModel.from_pretrained(f\"results/pretrained/small_epochs={min_cer_index+1}_fulldata\")\n",
+    "best_model = best_model.to(\"mps\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def majority_vote(htrnet, cnn_bilstm_mltu, trocr, trocr_process, image):\n",
+    "    \"\"\"\n",
+    "    In case of tie, cnn_bilstm_mltu is given preference. \n",
+    "    \"\"\"\n",
+    "    #print(image.shape)\n",
+    "    htrnet_pred = htrnet.predict(image) \n",
+    "    cnn_bilstm_mltu_pred = cnn_bilstm_mltu.predict(image)\n",
+    "    trocr_pred = trocr.generate(\n",
+    "        trocr_process(image, return_tensors=\"pt\").pixel_values\n",
+    "    )\n",
+    "    trocr_pred = trocr_process.batch_decode(trocr_pred, skip_special_tokens=True)\n",
+    "    trocr_pred = trocr_pred[0]\n",
+    "    #print(htrnet_pred, cnn_bilstm_mltu_pred, trocr_pred)\n",
+    "    freq_dict = {}\n",
+    "    for pred in [htrnet_pred, cnn_bilstm_mltu_pred, trocr_pred]:\n",
+    "        if pred in freq_dict:\n",
+    "            freq_dict[pred] += 1\n",
+    "        else:\n",
+    "            freq_dict[pred] = 1\n",
+    "    max_freq = max(freq_dict.values())\n",
+    "    max_freq_preds = [k for k, v in freq_dict.items() if v == max_freq]\n",
+    "    if len(max_freq_preds) == 1: # tie \n",
+    "        return max_freq_preds[0]\n",
+    "    else:\n",
+    "        return cnn_bilstm_mltu_pred\n",
+    "    \n",
+    "def evaludate_with_majority_vote(datapath):\n",
+    "    \n",
+    "    htr_net = ImageToWordModel(\"results/htr_full_data/model.onnx\") \n",
+    "    cnn_bilstm_mltu = ImageToWordModel(\"results/cnn_bilstm_mltu_all_data/model.onnx\") \n",
+    "    processor = TrOCRProcessor.from_pretrained(\"microsoft/trocr-small-handwritten\", quiet=True)\n",
+    "    # device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "    cer = [] \n",
+    "    wer = [] \n",
+    "        \n",
+    "        \n",
+    "    if \"csv\" in datapath:\n",
+    "        df = pd.read_csv(datapath).values.tolist()\n",
+    "    elif \"npy\" in datapath:  \n",
+    "        df = np.load(datapath).tolist() \n",
+    "    else : \n",
+    "        raise ValueError(\"Invalid data path. Please provide a csv or npy file\")\n",
+    "    \n",
+    "    cer = [] \n",
+    "    wer = [] \n",
+    "    for image_path, label in tqdm(df):\n",
+    "        image = cv2.imread(image_path.replace(\"\\\\\", \"/\"))\n",
+    "        \n",
+    "        prediction_text = majority_vote(\n",
+    "            htr_net,\n",
+    "            cnn_bilstm_mltu,\n",
+    "            best_model.to(\"cpu\"), \n",
+    "            processor, \n",
+    "            image\n",
+    "        )\n",
+    "            \n",
+    "        cer.append(get_cer(prediction_text, label))\n",
+    "        wer.append(get_wer(prediction_text, label)) \n",
+    "    \n",
+    "    return np.average(cer), np.average(wer) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51a3bb32fd7a465890ba0f6144a028b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/247 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test CER with majority vote:  0.17186234817813764\n",
+      "Test WER with majority vote:  0.291497975708502\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "928fcd7b63fe4f97a81230776f64ca53",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1131 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val CER with majority vote:  0.05343353964043619\n",
+      "Val WER with majority vote:  0.11229000884173299\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_cer_maj,test_wer_maj= evaludate_with_majority_vote(\"data/testset.npy\")\n",
+    "print(\"Test CER with majority vote: \", test_cer_maj)\n",
+    "print(\"Test WER with majority vote: \", test_wer_maj)\n",
+    "val_cer_maj, val_wer_maj = evaludate_with_majority_vote(\"data/valset.npy\") \n",
+    "print(\"Val CER with majority vote: \", val_cer_maj)\n",
+    "print(\"Val WER with majority vote: \", val_wer_maj)\n"
    ]
   },
   {
