--- a/notebooks/inference_finetuned.ipynb
+++ b/notebooks/inference_finetuned.ipynb
@@ -46,6 +46,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing models for differents epochs\n",
+    "This code uses models saved in \"results/pretrained\" by the finetuning notebook. As there are 15 of them and they are big, we can't it directly upload them on git. So run \"fine_tune_trocr.ipynb\" to generate them. \n",
+    "\n",
+    "However, we provide the best performing model in the following link : https://drive.google.com/drive/folders/12I3GhCDFewbT3f5TpPIMebGkLSHleFem?usp=sharing. \n",
+    "\n",
+    "\n",
+    "If you download it and put it in the \"results/pretrained\" folder, you can run the next section of the code to verify the performence of the majority voting algorithm.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -339,6 +352,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best performing model is obtained after 11 epochs. \n",
+    "\n",
+    "### Majority voting algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -475,6 +497,13 @@
     "print(\"Val CER with majority vote: \", val_cer_maj)\n",
     "print(\"Val WER with majority vote: \", val_wer_maj)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
