Clean up interpret_results.ipynb

--- a/notebooks/interpret_results.ipynb
+++ b/notebooks/interpret_results.ipynb
@@ -18,18 +18,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Function to interpret the model's performance by evaluating CER and WER on both validation and test datasets\n",
     "def interpret(model_path):\n",
+    "    \n",
+    "    # Evaluate the model on the validation set and obtain the CER and WER\n",
     "    cer_val, wer_val = evaluate_model(\n",
     "    model_path=model_path, \n",
     "    datapath= model_path + '/val.csv' \n",
     "    )\n",
+    "\n",
+    "    # Evaluate the model on the test set and obtain the CER and WER\n",
     "    cer_test, wer_test = evaluate_model(\n",
     "    model_path=model_path,\n",
     "    datapath='data/testset.npy'\n",
     "    )\n",
+    "\n",
     "    print(\"\\t\\tCER\\t\\tWER\")\n",
-    "    #round up to 4 decimal places \n",
+    "    \n",
+    "    # Round up to 4 decimal places \n",
     "    cer_val = round(cer_val, 4)\n",
     "    wer_val = round(wer_val, 4)\n",
     "    cer_test = round(cer_test, 4)\n",
@@ -79,7 +85,7 @@
     }
    ],
    "source": [
-    "htr_net_no_cus = interpret('results/htr_net_no_custom_new_split')\n"
+    "htr_net_no_cus = interpret('results/htr_net_no_custom_new_split')"
    ]
   },
   {
@@ -161,7 +167,7 @@
     }
    ],
    "source": [
-    "cnn_bilstm_no_cust = interpret('results/cnn_bilstm_no_custom')\n"
+    "cnn_bilstm_no_cust = interpret('results/cnn_bilstm_no_custom')"
    ]
   },
   {
@@ -244,7 +250,7 @@
     "print(\"Custom dataset \\t\\t WITHOUT \\t\\t WITH\")\n",
     "print(\"\\t\\t\\t Val \\t Test \\t\\t Val \\t Test\")\n",
     "print(f\"CNN-BiLSTM-MLTU  \\t{cnn_bilstm_no_cust[1]} \\t {cnn_bilstm_no_cust[3]} \\t {cnn_bilstm_cust[1]}\\t {cnn_bilstm_cust[3]}\")\n",
-    "print(f\"HTR-Net \\t\\t{htr_net_no_cus[1]} \\t {htr_net_no_cus[3]} \\t {htr_net_cus[1]}  {htr_net_cus[3]}\")\n"
+    "print(f\"HTR-Net \\t\\t{htr_net_no_cus[1]} \\t {htr_net_no_cus[3]} \\t {htr_net_cus[1]}  {htr_net_cus[3]}\")"
    ]
   },
   {
@@ -253,28 +259,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load predictions from the CSV file containing third-party predictions\n",
     "provided_preds_df = pd.read_csv('data/raw/chess_reader_data/prediciton.csv')\n",
-    "# open test set \n",
+    "\n",
+    "# Function to evaluate performance (CER and WER) of a third-party model\n",
     "def get_perf_of_third_party(third_party_col): \n",
+    "    # Load the test set (images and their corresponding ground truth labels)\n",
     "    test_set = np.load('data/testset.npy', allow_pickle=True) \n",
-    "    # preds = provided_preds_df[third_party_col].values\n",
     "    \n",
     "    avg_cer = 0 \n",
-    "   \n",
     "    avg_wer = 0 \n",
+    "\n",
     "    for (img_file_name,label) in test_set : \n",
     "        image_name = img_file_name.split('/')[-1] \n",
-    "        # remove .png \n",
+    "        # Remove .png \n",
     "        image_id = image_name.split('.')[0] \n",
-    "        # find rows that have image_name as their first column\n",
+    "        # Find rows that have image_name as their first column\n",
     "        rows = provided_preds_df.loc[provided_preds_df[\"id\"] == int(image_id)] \n",
     "        pred = str(rows[third_party_col].values[0]) \n",
     "        pred = pred if pred != 'nan' else '' \n",
     "        avg_cer += get_cer(label, pred)\n",
     "        avg_wer += get_wer(pred, label) \n",
+    "\n",
     "    avg_cer= round(avg_cer / len(test_set), 4)\n",
     "    avg_wer = round(avg_wer / len(test_set), 4)\n",
-    "    return avg_cer,avg_wer\n"
+    "\n",
+    "    return avg_cer,avg_wer"
    ]
   },
   {
@@ -285,8 +295,7 @@
    "source": [
     "cer_google, wer_google = get_perf_of_third_party('gl')\n",
     "cer_azure, wer_azure = get_perf_of_third_party('az') \n",
-    "cer_abby, wer_azure = get_perf_of_third_party('ab')\n",
-    "\n"
+    "cer_abby, wer_azure = get_perf_of_third_party('ab')"
    ]
   },
   {
@@ -319,15 +328,8 @@
     "print(\"----------------- Our Models on Test Set ----------------\")\n",
     "print(\"\\t\\t  CER \\t\\t WER\") \n",
     "print(f\"CNN-BiLSTM-MLTU\\t  {cnn_bilstm_cust[2]} \\t {cnn_bilstm_cust[3]}\")\n",
-    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]} \\t {htr_net_cus[3]}\")\n"
+    "print(f\"HTR-Net\\t\\t  {htr_net_cus[2]} \\t {htr_net_cus[3]}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
